--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ut-bus",
-  "version": "7.62.12",
+  "version": "7.62.13-jose.0",
   "description": "UT bus module",
   "dependencies": {
     "@hapi/boom": "9.1.4",
@@ -11,7 +11,7 @@
     "@hapi/inert": "6.0.5",
     "@hapi/pez": "5.0.3",
     "browser-process-hrtime": "1.0.0",
-    "jose": "4.6.0",
+    "jose": "4.11.0",
     "lodash.set": "4.3.2",
     "lru-cache": "7.8.1",
     "multicast-dns": "7.2.4",
